# yast-schema

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  SUBDIRS  yast2-schema.spec.in
.github/workflows/: ci.yml  submit.yml
doc/: .cvsignore  Makefile.am
package/: yast2-schema-default.changes  yast2-schema-default.spec  yast2-schema-micro.changes  yast2-schema-micro.spec  yast2-schema.changes  yast2-schema.spec
schema/doc/: Makefile.am  README  RngToRncProcessorConfig.xsl  RngToRncXml.xsl  yast2-schema
schema/package/: yast2-schema.changes
schema/scripts/: Makefile.am  collect.sh
schema/src/: profile.rnc.templ
schema/src/rnc/: Makefile.am
schema/src/rng/: Makefile.am
scripts/: Makefile.am  collect.sh
src/: Makefile.am  collect.sh  profile.rnc.templ
src/rnc/: Makefile.am
src/rng/: Makefile.am
